--- a/.github/workflows/updateVersion.yml
+++ b/.github/workflows/updateVersion.yml
@@ -1,9 +1,6 @@
 ---
 name: Update Version
 'on':
-  push:
-    branches:
-      - main
   workflow_call:
     inputs:
       gitUsername:
@@ -35,23 +32,21 @@ jobs:
 
       - name: Bump Versioning and update CHANGELOG.md
         run: |
-          source metadata/version.sh
-          # Update CHANGELOG.md with appropriate entry
+          source metadata/version.sj
+          if [ $GITHUB_REF_NAME = main ]; then
+            git checkout main
+            # Update CHANGELOG.md with appropriate entry
+            ## <HERE>
+            # Bump Version to required new version
+            echo "${CURRENT_VERSION} to ${FUTURE_VERSION} in file ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}"
+            sed -i "s/${CURRENT_VERSION}/${FUTURE_VERSION}/" ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}
 
-          ## HERE
-
-          # Bump Version to required new version
-          echo "${CURRENT_VERSION} to ${FUTURE_VERSION} in file ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}"
-          sed -i "s/${CURRENT_VERSION}/${FUTURE_VERSION}/" ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}
-          git status
-          git branch
-
-          echo "test" >> LICENSE
-          # Commit back to mainline with updates, if there are changes
-          if [[ -z $(git status is) ]]; then
-            git config --global user.name "${{ inputs.gitUsername }}"
-            git config --global user.email "${{ inputs.gitEmail }}"
-            git add CHANGELOG.md ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}
-            git commit -m "github pipeline: automated version bump to from ${CURRENT_VERSION} to ${FUTURE_VERSION}"
-            git push
+            # Commit back to mainline with updates, if there are changes
+            if [[ -z $(git status is) ]]; then
+              git config --global user.name "${{ inputs.gitUsername }}"
+              git config --global user.email "${{ inputs.gitEmail }}"
+              git add CHANGELOG.md ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}
+              git commit -m "github pipeline: automated version bump to from ${CURRENT_VERSION} to ${FUTURE_VERSION}"
+              git push
+            fi
           fi
