--- a/.github/workflows/updateVersion.yml
+++ b/.github/workflows/updateVersion.yml
@@ -34,18 +34,20 @@ jobs:
         run: |
           source metadata/version.sh
           if [ $GITHUB_REF_NAME = main ]; then
-            git checkout main
             # Update CHANGELOG.md with appropriate entry
             ## <HERE>
             # Bump Version to required new version
             echo "${CURRENT_VERSION} to ${FUTURE_VERSION} in file ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}"
             sed -i "s/${CURRENT_VERSION}/${FUTURE_VERSION}/" ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}
 
+            touch file.txt
+            git status
             # Commit back to mainline with updates, if there are changes
             if [[ -z $(git status is) ]]; then
               git config --global user.name "${{ inputs.gitUsername }}"
               git config --global user.email "${{ inputs.gitEmail }}"
-              git add CHANGELOG.md ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}
+              git add ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}
+              git add file.txt
               git commit -m "github pipeline: automated version bump from ${CURRENT_VERSION} to ${FUTURE_VERSION}"
               git push
             fi
