feat: Include version bumping into the workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,17 +8,17 @@ name: CI
 
 jobs:
   get-version:
-    uses: ./.github/workflows/getVersion.yml@main
+    uses: ./.github/workflows/getVersion.yml
     with:
       metadataFile: 'metadata.json'
       metadataPath: .
   yaml-lint:
-    uses: ./.github/workflows/yamlLint.yml@main
+    uses: ./.github/workflows/yamlLint.yml
     with:
       yamlPath: '.github'
     needs: get-version
   update-version:
-    uses: ./.github/workflows/updateVersion.yml@main
+    uses: ./.github/workflows/updateVersion.yml
     with:
       gitUsername: 'grababyte'
       gitEmail: 'grababyte@github.com'
