--- a/.github/workflows/getVersion.yml
+++ b/.github/workflows/getVersion.yml
@@ -48,20 +48,14 @@ jobs:
           PATCH_VERSION=$(echo ${PROJECT_VERSION} | cut -d '.' -f3)
           CURRENT_VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
 
+          # This directory will never be present due to the ephemeral nature of the hosted agents
           mkdir metadata
           echo "CURRENT_VERSION=${CURRENT_VERSION}" >> metadata/version.sh
 
-          echo ${MAJOR_VERSION}
-          echo ${MINOR_VERSION}
-          echo ${PATCH_VERSION}
-
-          # Auto-Bumping relies on a commit message naming convention, starting with the change type.
+          # Auto-Bumping relies on a commit message naming convention, starting with the change type
           # Example "feat: I added something cool"
           GIT_COMMIT=$(git log -1 --oneline | cut -d ' ' -f1)
           GIT_COMMIT_TYPE=$(git log -1 --oneline | cut -d ' ' -f2)
-
-          echo ${GIT_COMMIT}
-          echo ${GIT_COMMIT_TYPE}
 
           # A small number of commit types for now
           case "${GIT_COMMIT_TYPE}" in
