--- a/.github/workflows/getVersion.yml
+++ b/.github/workflows/getVersion.yml
@@ -28,7 +28,6 @@ jobs:
             *.yml|*.yaml)
               if [ $GITHUB_REF_NAME = main ]; then
                 PROJECT_VERSION=$(grep -w version ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | cut -d ':' -f2 | tr -d ' ",')
-                echo "PROJECT_VERSION=${PROJECT_VERSION}"
               else
                 PROJECT_VERSION=$(grep -w version ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | cut -d ':' -f2 | tr -d ' ",')-rc$GITHUB_RUN_ID
               fi
@@ -49,20 +48,14 @@ jobs:
           PATCH_VERSION=$(echo ${PROJECT_VERSION} | cut -d '.' -f3)
           CURRENT_VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
 
+          # This directory will never be present due to the ephemeral nature of the hosted agents
           mkdir metadata
           echo "CURRENT_VERSION=${CURRENT_VERSION}" >> metadata/version.sh
 
-          echo ${MAJOR_VERSION}
-          echo ${MINOR_VERSION}
-          echo ${PATCH_VERSION}
-
-          # Auto-Bumping relies on a commit message naming convention, starting with the change type.
+          # Auto-Bumping relies on a commit message naming convention, starting with the change type
           # Example "feat: I added something cool"
           GIT_COMMIT=$(git log -1 --oneline | cut -d ' ' -f1)
           GIT_COMMIT_TYPE=$(git log -1 --oneline | cut -d ' ' -f2)
-
-          echo ${GIT_COMMIT}
-          echo ${GIT_COMMIT_TYPE}
 
           # A small number of commit types for now
           case "${GIT_COMMIT_TYPE}" in
