--- a/.github/workflows/updateVersion.yml
+++ b/.github/workflows/updateVersion.yml
@@ -42,7 +42,7 @@ jobs:
             entryHeader=$(echo "## [${CURRENT_VERSION}] - ($(date +%d-%m-%Y))")
             sed -i "/Changelog/a ${entryHeader}" CHANGELOG.md
             sed -i "/Changelog/{G;}" CHANGELOG.md
-            sed -i "/${CURRENT_VERSION}/a ${GIT_COMMIT}" CHANGELOG.md
+            sed -i "/${CURRENT_VERSION}/a ${GIT_COMMIT_MESSAGE}" CHANGELOG.md
             # Bump Version to required new version
             sed -i "s/${CURRENT_VERSION}/${FUTURE_VERSION}/" ${{ inputs.metadataPath }}/${{ inputs.metadataFile }}
             # Commit back to mainline with updates, if there are changes
