--- a/.github/workflows/getVersion.yml
+++ b/.github/workflows/getVersion.yml
@@ -61,7 +61,7 @@ jobs:
 
           # Set to working towards version based off the commit message
           if [ $GITHUB_REF_NAME != main ]; then
-            FUTURE_VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}-rc$GITHUB_RUN_ID"
+            FUTURE_VERSION="development-rc$GITHUB_RUN_ID"
           fi
 
           # Construct the git commit message format
