--- a/.github/workflows/dockerBuildPublish.yml
+++ b/.github/workflows/dockerBuildPublish.yml
@@ -38,9 +38,11 @@ jobs:
       - name: Build Docker Image
         run: |
           source metadata/version.sh
-          docker build -t="${GITHUB_REPOSITORY_OWNER,,}/${PROJECT_NAME}:${CURRENT_VERSION}" -f ${{ inputs.dockerfilePath }} .
+          docker build -t="${GITHUB_REPOSITORY_OWNER,,}/${PROJECT_NAME}:${FUTURE_VERSION}" -f ${{ inputs.dockerfilePath }} .
 
       - name: Publish Docker Image
         run: |
-          source metadata/version.sh
-          docker push ${GITHUB_REPOSITORY_OWNER,,}/${PROJECT_NAME}:${CURRENT_VERSION}
+          if [ $GITHUB_REF_NAME = main ]; then
+            source metadata/version.sh
+            docker push ${GITHUB_REPOSITORY_OWNER,,}/${PROJECT_NAME}:${FUTURE_VERSION}
+          fi
