--- a/.github/workflows/getVersion.yml
+++ b/.github/workflows/getVersion.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Bump Artifact Version
         run: |
           # Gather current metadata
-          PROJECT_NAME=$(grep name ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | cut -d ':' -f2 | tr -d ' ",')
+          PROJECT_NAME=$(grep name ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | head -1 | cut -d ':' -f2 | tr -d ' ",')
           CURRENT_VERSION=$(grep -w version ${{ inputs.metadataPath }}/${{ inputs.metadataFile }} | cut -d ':' -f2 | tr -d ' ",')
 
           # This directory will never be present due to the ephemeral nature of the hosted agents
