--- a/.github/workflows/dockerScan.yml
+++ b/.github/workflows/dockerScan.yml
@@ -13,6 +13,9 @@ name: Dockerfile Scan
       DOCKERHUB_TOKEN:
         description: 'The Docker Hub Password'
         required: true
+      SNYK_TOKEN:
+        description: 'The Snyk API Token'
+        required: true
 
 jobs:
   scan:
@@ -29,8 +32,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Install docker-scan-plugin
+        run: |
+          sudo apt-get install docker-scan-plugin
+
       - name: Scan Dockerfile
         run: |
-          docker scan --accept-license --version
-          yes | docker scan --file ${{ inputs.dockerfilePath }} && \
+          docker scan --login --token ${{ secrets.SNYK_TOKEN }}
+          docker scan --file ${{ inputs.dockerfilePath }} && \
           echo "Docker Security Scan: Successful"
