feat: docker scan functionality

--- a/.github/workflows/dockerScan.yml
+++ b/.github/workflows/dockerScan.yml
@@ -34,6 +34,7 @@ jobs:
 
       - name: Install docker-scan-plugin
         run: |
+          sudo apt update -y && \
           sudo apt-get install docker-scan-plugin
 
       - name: Scan Dockerfile
