--- a/.github/workflows/dockerScan.yml
+++ b/.github/workflows/dockerScan.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install docker-scan-plugin
         run: |
           sudo apt update -y && \
-          sudo apt-get install docker-scan-plugin
+          sudo apt-get install -y docker-scan-plugin
 
       - name: Scan Dockerfile
         run: |
