feat: docker scan functionality

--- a/.github/workflows/dockerScan.yml
+++ b/.github/workflows/dockerScan.yml
@@ -32,10 +32,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Install docker-scan-plugin
-        run: |
-          sudo apt update -y && \
-          sudo apt-get install -y docker-scan-plugin
+          # - name: Install docker-scan-plugin
+          #   run: |
+          #     sudo apt update -y && \
+          #     sudo apt-get install -y docker-scan-plugin
 
       - name: Scan Dockerfile
         run: |
