--- a/.github/workflows/dockerScan.yml
+++ b/.github/workflows/dockerScan.yml
@@ -1,5 +1,5 @@
 ---
-name: Dockerfile Scan
+name: Docker Vulnerability Scan
 'on':
   workflow_call:
     inputs:
@@ -19,12 +19,18 @@ name: Dockerfile Scan
 
 jobs:
   scan:
-    name: Scan
+    name: Scan Image
     environment: CI
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the codebase.
+      - name: Check out the codebase
         uses: actions/checkout@v2
+
+      - name: Download file
+        uses: actions/download-artifact@v1
+        with:
+          name: version.sh
+          path: metadata
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -32,13 +38,15 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-          # - name: Install docker-scan-plugin
-          #   run: |
-          #     sudo apt update -y && \
-          #     sudo apt-get install -y docker-scan-plugin
-
-      - name: Scan Dockerfile
+      - name: Source Metadata
         run: |
-          docker scan --login --token ${{ secrets.SNYK_TOKEN }}
-          docker scan --file ${{ inputs.dockerfilePath }} && \
-          echo "Docker Security Scan: Successful"
+          source metadata/version.sh
+
+      - name: Run Snyk Vulnerability scanner for Docker
+        continue-on-error: true
+        uses: snyk/actions/docker@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          image: ${PROJECT_NAME}:${FUTURE_VERSION}
+          args: --file=${{ inputs.dockerfilePath }}
