--- a/.github/workflows/dockerScan.yml
+++ b/.github/workflows/dockerScan.yml
@@ -51,5 +51,5 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          image: ${{ steps.metadata.outputs.NAME}:${{ steps.metadata.outputs.VERSION }}
+          image: ${{ steps.metadata.outputs.NAME }}:${{ steps.metadata.outputs.VERSION }}
           args: --file=${{ inputs.dockerfilePath }}
