--- a/.github/workflows/dockerBuildPublish.yml
+++ b/.github/workflows/dockerBuildPublish.yml
@@ -29,29 +29,23 @@ jobs:
           name: version.sh
           path: metadata
 
+      - name: Source metadata
+        id: metadata
+        run: |
+          source metadata/version.sh
+          echo "::set-output name=NAME::${PROJECT_NAME}"
+          echo "::set-output name=VERSION::${FUTURE_VERSION}"
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Docker Image
-        run: |
-          source metadata/version.sh
-          docker build -t="${GITHUB_REPOSITORY_OWNER,,}/${PROJECT_NAME}:${FUTURE_VERSION}" -f ${{ inputs.dockerfilePath }} .
-
-      - name: Run Snyk Vulnerability scanner for Docker
-        continue-on-error: true
-        uses: snyk/actions/docker@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          image: ${PROJECT_NAME}:${FUTURE_VERSION}
-          args: --file=${{ inputs.dockerfilePath }}
-
-      - name: Publish Docker Image
-        run: |
-          if [ $GITHUB_REF_NAME = main ]; then
-            source metadata/version.sh
-            docker push ${GITHUB_REPOSITORY_OWNER,,}/${PROJECT_NAME}:${FUTURE_VERSION}
-          fi
+       - name: Docker Build
+         uses: docker/build-push-action@v2
+           with:
+           context: .
+           file: ${{ env.dockerfilePath }}
+           push: ${{ contains(github.ref, 'refs/heads/main') }}
+           tags: ${GITHUB_REPOSITORY_OWNER,,}/${{ steps.metadata.outputs.PROJECT_NAME}}:${{ steps.metadata.outputs.FUTURE_VERSION }}
