--- a/.github/workflows/dockerBuildScan.yml
+++ b/.github/workflows/dockerBuildScan.yml
@@ -45,9 +45,13 @@ jobs:
           echo "::set-output name=NAME::${PROJECT_NAME}"
           echo "::set-output name=VERSION::${FUTURE_VERSION}"
 
-      - name: Build Docker Image
-        run: |
-          docker build -t=${GITHUB_REPOSITORY_OWNER,,}/${{ steps.metadata.outputs.NAME }}:${{ steps.metadata.outputs.VERSION }} -f ${{ inputs.dockerfilePath }} .
+      - name: Docker Build
+        uses: docker/build-push-action@v2
+          with:
+          context: .
+          file: ${{ env.dockerfilePath }}
+          push: ${{ contains(github.ref, 'refs/heads/main') }}
+          tags: ${GITHUB_REPOSITORY_OWNER,,}/${{ steps.metadata.outputs.PROJECT_NAME}}:${{ steps.metadata.outputs.FUTURE_VERSION }}
 
       - name: Run Snyk Vulnerability scanner for Docker
         continue-on-error: true
