--- a/.github/workflows/dockerBuildPublish.yml
+++ b/.github/workflows/dockerBuildPublish.yml
@@ -35,6 +35,7 @@ jobs:
           source metadata/version.sh
           echo "::set-output name=NAME::${PROJECT_NAME}"
           echo "::set-output name=VERSION::${FUTURE_VERSION}"
+          echo "::set-output name=OWNER::${GITHUB_REPOSITORY_OWNER,,}"
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -48,4 +49,4 @@ jobs:
           context: .
           file: ${{ env.dockerfilePath }}
           push: ${{ contains(github.ref, 'refs/heads/main') }}
-          tags: ${GITHUB_REPOSITORY_OWNER,,}/${{ steps.metadata.outputs.PROJECT_NAME}}:${{ steps.metadata.outputs.FUTURE_VERSION }}
+          tags: ${{ steps.metadata.outputs.NAMEOWNER }}/${{ steps.metadata.outputs.NAME }}:${{ steps.metadata.outputs.VERSION }}
