--- a/.github/workflows/dockerBuildScan.yml
+++ b/.github/workflows/dockerBuildScan.yml
@@ -44,14 +44,14 @@ jobs:
           source metadata/version.sh
           echo "::set-output name=NAME::${PROJECT_NAME}"
           echo "::set-output name=VERSION::${FUTURE_VERSION}"
-          echo "::set-env name=OWNER::$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')"
+          echo "::set-output name=OWNER::$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')"
 
       - name: Docker Build
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ${{ inputs.dockerfilePath }}
-          push: ${{ contains(github.ref, 'refs/heads/main') }}
+          #push: ${{ contains(github.ref, 'refs/heads/main') }}
           tags: ${{ steps.metadata.outputs.OWNER }}/${{ steps.metadata.outputs.NAME}}:${{ steps.metadata.outputs.VERSION }}
 
       - name: Run Snyk Vulnerability scanner for Docker
