--- a/.github/workflows/dockerBuildPublish.yml
+++ b/.github/workflows/dockerBuildPublish.yml
@@ -35,7 +35,7 @@ jobs:
           source metadata/version.sh
           echo "::set-output name=NAME::${PROJECT_NAME}"
           echo "::set-output name=VERSION::${FUTURE_VERSION}"
-          echo "::set-env name=OWNER::$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')"
+          echo "::set-output name=OWNER::$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')"
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
