feat: Add Sonar Scan quality gate

--- a/.github/workflows/sonarScan.yml
+++ b/.github/workflows/sonarScan.yml
@@ -3,7 +3,7 @@ name: Sonarcloud Scan
 'on':
   workflow_call:
     secrets:
-      GITHUB_TOKEN:
+      WORKFLOW_GITHUB_TOKEN:
         description: 'The github account Token'
         required: true
         type: string
@@ -37,7 +37,7 @@ jobs:
       - name: Sonar Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.WORKFLOW_GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           args: >
