--- a/.github/workflows/sonarScan.yml
+++ b/.github/workflows/sonarScan.yml
@@ -40,5 +40,5 @@ jobs:
         with:
           args: >
             -Dsonar.organization=${{ steps.metadata.outputs.OWNER }}
-            -Dsonar.projectKey=${{ github.repository_owner }}_${{ steps.metadata.outputs.NAME }}
+            -Dsonar.projectKey=${{ github.repository_owner }}_${{ github.repository }}
             -Dsonar.sources=.
